Include QR token, expiry, and check-in flag on agenda slots

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_MOBILE_CLIENT_IDS=
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Signing key for QR tokens used during session check-in/checkout.
+QR_SIGNING_SECRET=
